testsuite/tests/linear/should_fail/LinearConfusedDollar.stderr
LinearConfusedDollar.hs:12:3: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘x’
    • In an equation for ‘g’: g x = f $ x

LinearConfusedDollar.hs:12:7: error: [GHC-83865]
    • Couldn't match type ‘One’ with ‘Many’
      Expected: a -> a
        Actual: a %1 -> a
    • In the first argument of ‘($)’, namely ‘f’
      In the expression: f $ x
      In an equation for ‘g’: g x = f $ x

